@@ -1,3 +1,8 @@
+X.XXXX    XXXX-XX-XX
+
+- No longer auto-tested on 5.12 and below because build-time dependencies
+  no longer build reliably
+
 4.0002    2024-03-08
 
 - Added timezones() method
